syntax = "proto3";

package management;

import "storage.proto";
import "google/protobuf/empty.proto";

enum EmployeeMaritalStatus {
  MARITAl_STATUS_SINGLE = 0;
  MARITAl_STATUS_MARRIED = 1;
  MARITAl_STATUS_DIVORCED = 2;
  MARITAl_STATUS_WIDOWED = 3;
  MARITAl_STATUS_SEPERATED = 4;
}

enum EmployeeRole {
  ROLE_SUPER_ADMIN = 0;
  ROLE_MANAGER = 1;
  ROLE_EMPLOYEE = 2;
}

enum EmployeePanActionType {
  EMPLOYEE_PAN_ACTION_TYPE_HIRE = 0;
  EMPLOYEE_PAN_ACTION_TYPE_PROMOTION = 1;
  EMPLOYEE_PAN_ACTION_TYPE_SALARY_ADJUSTMENT = 2;
  EMPLOYEE_PAN_ACTION_TYPE_TERMINATION = 3;
  EMPLOYEE_PAN_ACTION_TYPE_LEAVE = 4;
  EMPLOYEE_PAN_ACTION_TYPE_TRANSFER = 5;
}

enum EmployeePanActionStatus {
  EMPLOYEE_PAN_ACTION_STATUS_PENDING = 0;
  EMPLOYEE_PAN_ACTION_STATUS_APPROVED = 1;
  EMPLOYEE_PAN_ACTION_STATUS_REJECTED = 2;
}

enum EmployeeStatus {
  EMPLOYEE_STATUS_ACTIVE = 0;
  EMPLOYEE_STATUS_INACTIVE = 1;
}

enum EmployeeContractType {
  CONTRACT_TYPE_FULL_TIME = 0;
  CONTRACT_TYPE_PART_TIME = 1;
}

message Employee {
  string id = 1;
  optional storage.file avatar_photo = 2;
  optional storage.file cover_photo = 3;
  string first_name = 4;
  string middle_name = 5;
  string last_name = 6;
  optional string tel_number = 7;
  optional string mobile_Number = 8;
  string email = 9;
  EmployeeRole role = 10;
  EmployeeStatus status = 11;
  EmployeeContractType contract_type = 12;
  string phil_nat_id = 13;
  string birth_date = 14;
  repeated string special_interests = 15;
  repeated string learning_institutions = 16;
  string auth_user_id = 17;
  optional string spouse_first_name = 18;
  optional string spouse_middle_name = 19;
  optional string spouse_last_name = 20;
  optional string spouse_employer = 21;
}

message Department {
  string id = 1;
  string name = 2;
  optional string description = 3;
  repeated string employee_ids = 4;
}

message JobInformation {
  string id = 1;
  string title = 2;
  string employee_id = 3;
  string department_id = 4;
  string supervisor_id = 5;
  string work_location = 6;
  string start_date = 7;
  string salary = 8;
  string currency = 9;
}

message EmployeeEmergencyInformation {
  string id = 1;
  string employee_id = 2;
  string address = 3;
  optional string tel_number = 4;
  optional string mobile_number = 5;
  repeated string health_conditions = 6;
  string contact_name = 7;
}

message PersonnelAction {
  string id = 1;
  string employee_id = 2;
  EmployeePanActionType action_type = 3;
  string old_value = 3;
  string new_value = 4;
  string effective_date = 5;
  EmployeePanActionStatus status = 6;
  string requested_by = 7;
  string approved_by = 8;
}

message CreateEmployeeRequest {
  optional storage.file avatar_photo = 1;
  optional storage.file cover_photo = 2;
  string first_name = 3;
  string middle_name = 4;
  string last_name = 5;
  optional string tel_number = 6;
  optional string mobile_Number = 7;
  string email = 8;
  EmployeeStatus status = 9;
  EmployeeContractType contract_type = 10;
  string phil_nat_id = 11;
  string birth_date = 12;
  repeated string special_interests = 13;
  repeated string learning_institutions = 14;
  optional string spouse_first_name = 15;
  optional string spouse_middle_name = 16;
  optional string spouse_last_name = 17;
  optional string spouse_employer = 18;
}

message GetEmployeeRequest { string id = 1; }

message GetEmployeesByDepartmentRequest { string department_id = 1; }

message ChangeEmployeeAvatarRequest { storage.file avatar_photo = 1; }

message ChangeEmployeeAvatarRequest { storage.file cover_photo = 1; }

message ChangeEmployeeFirstNameRequest { string first_name = 1; }

message ChangeEmployeeMiddleNameRequest { string middle_name = 1; }

message ChangeEmployeeLastNameRequest { string last_name = 1; }

message ChangeEmployeeTelNumberRequest { string tel_number = 1; }

message ChangeEmployeeMobileNumberRequest { string mobile_number = 1; }

message ChangeEmployeeEmailRequest { string email = 1; }

message ChangeEmployeeRoleRequest { EmployeeRole role = 1; }

message ChangeEmployeeStatusRequest { EmployeeStatus status = 1; }

message ChangeEmployeeContractTypeRequest {
  EmployeeContractType contract_type = 1;
}

message ChangePhilNatIDRequest { string phil_nat_id = 1; }

message ChangeBirthDateRequest { string birth_date = 1; }

message AddSpecialInterestRequest { string special_interest = 1; }

message RemoveSpecialInterestRequest { string special_interest = 1; }

message AddLearningInstitutionRequest { string learning_institution = 1; }

message RemoveLearningInstitutionRequest { string learning_institution = 1; }

message ChangeSpouseFirstNameRequest { string spouse_first_name = 1; }

message ChangeSpouseMiddleNameRequest { string spouse_middle_name = 1; }

message ChangeSpouseLastNameRequest { string spouse_last_name = 1; }

message ChangeSpouseEmployerRequest { string spouse_employer = 1; }

message RemoveEmployeeRequest { string id = 1; }

message CreateDepartmentRequest {
  string name = 1;
  optional string description = 2;
}

message AddEmployeeToDepartmentRequest {
  string employee_id = 1;
  string department_id = 2;
}

message RemoveEmployeeFromDepartmentRequest {
  string employee_id = 1;
  string department_id = 2;
}

message GetDepartmentRequest { string id = 1; }

message UpdateDepartmentNameRequest { string name = 1; }

message UpdateDepartmentDescriptionRequest { string description = 1; }

message RemoveDepartmentRequest { string id = 1; }

message CreateJobInformationRequest {
  string title = 1;
  string employee_id = 2;
  string department_id = 3;
  string supervisor_id = 4;
  string work_location = 5;
  string start_date = 6;
  string salary = 7;
  string currency = 8;
}

message GetJobInformationRequest { string id = 1; }

message ChangeJobTitleRequest { string title = 1; }

message ChangeJobDepartmentRequest { string department_id = 1; }

message ChangeJobSupervisorRequest { string supervisor_id = 1; }

message ChangeJobWorkLocationRequest { string work_location = 1; }

message ChangeJobStartDateRequest { string start_date = 1; }

message ChangeJobSalaryRequest { string salary = 1; }

message ChangeJobCurrencyRequest { string currency = 1; }

message RemoveJobInformationRequest { string id = 1; }

message CreateEmergencyInformationRequest {
  string employee_id = 1;
  string address = 2;
  optional string tel_number = 3;
  optional string mobile_number = 4;
  repeated string health_conditions = 5;
  string contact_name = 6;
}

message GetEmergencyInformationRequest { string employee_id = 1; }

message ChangeEmergencyInformationAddressRequest { string address = 1; }

message ChangeEmergencyInformationTelNumberRequest { string tel_number = 1; }

message ChangeEmergencyInformationMobileNumberRequest {
  string mobile_number = 1;
}

message ChangeEmergencyInformationContactNameRequest {
  string contact_name = 1;
}

message RemoveEmergencyInformationRequest { string employee_id = 1; }

message AddEmergencyInformationHealthConditionRequest {
  string health_condition = 1;
}

message RemoveEmergencyInformationHealthConditionRequest {
  string health_condition = 1;
}

message CreatePANRequest {
  string employee_id = 1;
  EmployeePanActionType action_type = 2;
  string old_value = 3;
  string new_value = 4;
  string effective_date = 5;
  EmployeePanActionStatus status = 6;
}

message GetPANInformationRequest { string id = 1; }

message ChangePANActionTypeRequest {
  string id = 1;
  EmployeePanActionType action_type = 1;
}

message ChangePANOldValueRequest {
  string id = 1;
  string old_value = 1;
}

message ChangePANNewValueRequest {
  string id = 1;
  string new_value = 1;
}

message ChangePANEffectiveDateRequest {
  string id = 1;
  string effective_date = 1;
}

message ApprovePANRequest { string id = 1; }

message RejectPANRequest { string id = 1; }

message RemovePANInformationRequest { string id = 1; }

service HumanResourceService {

  // employee

  // -- insert
  rpc CreateEmployee(CreateEmployeeRequest) returns (google.protobuf.Empty);
  rpc CreateManager(CreateEmployeeRequest) returns (google.protobuf.Empty);
  rpc CreateAdmin(CreateEmployeeRequest) returns (google.protobuf.Empty);
  rpc AddSpecialInterest(AddSpecialInterestRequest)
      returns (google.protobuf.Empty);
  rpc AddLearningInstitution(AddLearningInstitutionRequest)
      returns (google.protobuf.Empty);

  // -- read
  rpc GetEmployee(GetEmployeeRequest) returns (Employee);
  rpc GetEmployeesByDepartment(GetEmployeesByDepartmentRequest)
      returns (stream Employee);

  // -- update
  rpc ChangeEmployeeAvatar(ChangeEmployeeAvatarRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeCoverPhoto(ChangeEmployeeAvatarRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeFirstName(ChangeEmployeeFirstNameRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeMiddleName(ChangeEmployeeMiddleNameRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeLastName(ChangeEmployeeLastNameRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeTelNumber(ChangeEmployeeTelNumberRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeMobileNumber(ChangeEmployeeMobileNumberRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeEmail(ChangeEmployeeEmailRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeRole(ChangeEmployeeRoleRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeStatus(ChangeEmployeeStatusRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmployeeContractType(ChangeEmployeeContractTypeRequest)
      returns (google.protobuf.Empty);
  rpc ChangePhilNatID(ChangePhilNatIDRequest) returns (google.protobuf.Empty);
  rpc ChangeBirthDate(ChangeBirthDateRequest) returns (google.protobuf.Empty);
  rpc ChangeSpouseFirstName(ChangeSpouseFirstNameRequest)
      returns (google.protobuf.Empty);
  rpc ChangeSpouseMiddleName(ChangeSpouseMiddleNameRequest)
      returns (google.protobuf.Empty);
  rpc ChangeSpouseLastName(ChangeSpouseLastNameRequest)
      returns (google.protobuf.Empty);
  rpc ChangeSpouseEmployer(ChangeSpouseEmployerRequest)
      returns (google.protobuf.Empty);

  // -- delete
  rpc RemoveEmployee(RemoveEmployeeRequest) returns (google.protobuf.Empty);
  rpc RemoveSpecialInterest(RemoveSpecialInterestRequest)
      returns (google.protobuf.Empty);
  rpc RemoveLearningInstitition(RemoveLearningInstitutionRequest)
      returns (google.protobuf.Empty);

  // department

  // -- insert
  rpc CreateDepartment(CreateDepartmentRequest) returns (google.protobuf.Empty);
  rpc AddEmployeeToDepartment(AddEmployeeToDepartmentRequest)
      returns (google.protobuf.Empty);

  // -- read
  rpc GetDepartment(GetDepartmentRequest) returns (Department);

  // -- update
  rpc UpdateDepartmentName(UpdateDepartmentNameRequest)
      returns (google.protobuf.Empty);
  rpc UpdateDepartmentDescription(UpdateDepartmentDescriptionRequest)
      returns (google.protobuf.Empty);

  // -- delete
  rpc RemoveDepartment(RemoveDepartmentRequest) returns ();
  rpc RemoveEmployeeToDepartment(RemoveEmployeeFromDepartmentRequest)
      returns (google.protobuf.Empty);

  // job information
  // -- insert
  rpc CreateJobInformation(CreateJobInformationRequest)
      returns (google.protobuf.Empty);

  // -- read
  rpc GetJobInformation(GetJobInformationRequest) returns (JobInformation);

  // -- update
  rpc ChangeJobTitle(ChangeJobTitleRequest) returns (google.protobuf.Empty);
  rpc ChangeJobDepartment(ChangeJobDepartmentRequest)
      returns (google.protobuf.Empty);
  rpc ChangeJobSupervisor(ChangeJobSupervisorRequest)
      returns (google.protobuf.Empty);
  rpc ChangeJobWorkLocation(ChangeJobWorkLocationRequest)
      returns (google.protobuf.Empty);
  rpc ChangeJobStartDate(ChangeJobStartDateRequest)
      returns (google.protobuf.Empty);
  rpc ChangeJobSalary(ChangeJobSalaryRequest) returns (google.protobuf.Empty);
  rpc ChangeJobCurrency(ChangeJobCurrencyRequest)
      returns (google.protobuf.Empty);

  // -- delete
  rpc RemoveJobInformation(RemoveJobInformationRequest)
      returns (google.protobuf.Empty);

  // emergency information

  // -- insert
  rpc CreateEmergencyInformation(CreateEmergencyInformationRequest)
      returns (google.protobuf.Empty);
  rpc AddEmergencyInformationHealthCondition(
      AddEmergencyInformationHealthConditionRequest)
      returns (google.protobuf.Empty);

  // -- read
  rpc GetEmergencyInformation(GetEmergencyInformationRequest)
      returns (EmployeeEmergencyInformation);

  // -- update
  rpc ChangeEmergencyInformationAddress(
      ChangeEmergencyInformationAddressRequest) returns (google.protobuf.Empty);
  rpc ChangeEmergencyInformationTelNumber(
      ChangeEmergencyInformationTelNumberRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmergencyInformationMobileNumber(
      ChangeEmergencyInformationMobileNumberRequest)
      returns (google.protobuf.Empty);
  rpc ChangeEmergencyInformationContactName(
      ChangeEmergencyInformationContactNameRequest)
      returns (google.protobuf.Empty);

  // -- delete
  rpc RemoveEmergencyInformation(RemoveEmergencyInformationRequest)
      returns (google.protobuf.Empty);
  rpc RemoveEmergencyInformationHealthCondition(
      RemoveEmergencyInformationHealthConditionRequest)
      returns (google.protobuf.Empty);

  // personnel action notice

  // -- insert
  rpc CreatePANEmployeeRequest(CreatePANRequest)
      returns (google.protobuf.Empty);

  // -- read
  rpc GetPANInformation(GetPANInformation) returns (PersonnelAction);
  // -- update
  rpc ChangePANActionType(ChangePANActionTypeRequest)
      returns (google.protobuf.Empty);
  rpc ChangePANOldValue(ChangePANOldValueRequest)
      returns (google.protobuf.Empty);
  rpc ChangePANNewValue(ChangePANNewValueRequest)
      returns (google.protobuf.Empty);
  rpc ChangePANEffectiveDate(ChangePANEffectiveDateRequest)
      returns (google.protobuf.Empty);
  rpc ApprovePANRequest(ApprovePANRequest) returns (google.protobuf.Empty);
  rpc RejectPANRequest(RejectPANRequest) returns (google.protobuf.Empty);
  rpc RemovePANInformation(RemovePANInformationRequest)
      returns (google.protobuf.Empty);
}