syntax = "proto3";

package storage;

import "google/protobuf/empty.proto";

message FileMetadata {
  string id = 1;
  string name = 2;
  string type = 3;
  uint32 size = 4;
  bool is_public = 5;
  string owner_id = 6;
}

message FileChunk { bytes chunk = 1; }

message CreateFileMetadataRequest {
  string name = 1;
  string type = 2;
  uint32 size = 3;
  bool is_public = 4;
}

message CreateFileRequest {
  CreateFileMetadataRequest metadata = 1;
  FileChunk chunk = 2;
}

message DownloadFileRequest { string id = 1; }

message FileMetadataRequest {
  oneof request {
    string id = 1;
    string name = 2;
  }
}

message ShareFileRequest {
  string file_id = 1;
  oneof share_option { bool is_public = 2; }
  repeated string user_ids = 3;
}

message DeleteFileRequest { string id = 1; }

service StorageService {
  rpc CreateFile(stream CreateFileRequest) returns (FileMetadata);
  rpc ListOwnedFiles(google.protobuf.Empty) returns (stream FileMetadata);
  rpc ListSharedFiles(google.protobuf.Empty) returns (stream FileMetadata);
  rpc DownloadFile(DownloadFileRequest) returns (stream FileChunk);
  rpc GetFileMetadata(FileMetadataRequest) returns (FileMetadata);
  rpc ShareFile(ShareFileRequest) returns (FileMetadata);
  rpc DeleteFile(DeleteFileRequest) returns (google.protobuf.Empty);
}